[package]
name = "pinocchio-mpl-metadata"
description = "Pinocchio helpers to invoke MPL Metadata program instructions"
version = "0.2.0"
edition = "2021" # Changed from { workspace = true } to a valid edition
license = "MIT" # Changed from { workspace = true } to a valid license
readme = "./README.md"
repository = "https://github.com/your-repo/pinocchio-mpl-metadata" # Updated with a valid repository URL

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-token = { path = "../token" }
pinocchio-system = { path = "../system" }
mpl-token-auth-rules = { version = "=1.4.3-beta.1", features = ["no-entrypoint"] }
# mpl-utils = { version = "0.3.6", features = ["spl-token"] }
mpl-token-metadata-context-derive = { version = "0.3.0", path = "../mpl-token-metadata-context-derive" }
